--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <style>
     body {
       font-family: 'Arial', sans-serif;
-      background-color: #121212;
-      color: #fff;
+      background-color: ##93cdfc;
+      color: #2774a6;
       display: flex;
       flex-direction: column;
       align-items: center;
