--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: 'Arial', sans-serif;
-      background-color: ##93cdfc;
+      background-color: #93cdfc;
       color: #2774a6;
       display: flex;
       flex-direction: column;
